I add the appointment form activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="login_failed">"Login failed"</string>
     <string name="go_to_login"><u>LOGIN INSTEAD</u></string>
     <string name="go_to_register"><u>NEW USER? REGISTER HERE</u></string>
+    <string name="date">17 December 2019</string>
 </resources>
