--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="go_to_login"><u>LOGIN INSTEAD</u></string>
     <string name="go_to_register"><u>NEW USER? REGISTER HERE</u></string>
     <string name="date">17 December 2019</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
